# aegis-sky

./: README.md
TODO/: BLACK_BOX_AND_AEGIS_SKY.md
TODO/BLACK_BOX_AND_AEGIS_SKY/: 02.md
TODO/STRUCTURE/: NEW_STRUCTURE.md
brain/include/data/: SimDataset.h
brain/include/models/: AuraNet.h
brain/src/data/: SimDataset.cpp
brain/src/models/: AuraNet.cpp
cloud/api/: Dockerfile.ingestor
cloud/api/cmd/fleet_api/: main.go
cloud/api/cmd/ingestor/: main.go
core/: CMakeLists.txt  vcpkg.json
core/include/aegis/services/fusion/: Calibration.h  FusionEngine.h  Projector.cu
core/src/drivers/bridge_client/: ShmReader.h  SimCamera.cpp  SimRadar.cpp
core/src/drivers/gige_basler/: GStreamerCamera.cpp
core/src/drivers/real_sensors/: GStreamerCamera.h
core/src/main/: Main.cpp
core/src/platform/memory/: CudaAllocator.cpp
core/src/platform/threading/: Scheduler.cpp
core/src/services/comms/: StationLink.cpp
core/src/services/tracking/: KalmanFilter.h  TrackManager.cpp
docs/: structure.md
shared/include/aegis_ipc/: shm_layout.h  station_protocol.h
sim/assets/scenarios/: classification_exam.json  desert_test.json  doppler_notch.json  ew_screen.json  saturation_swarm.json  storm_attack.json  swarm_laser_defense.json  swarm_split.json  terrain_popup.json  urban_ambush.json
sim/include/sim/engine/: Environment.h  ScenarioLoader.h  SimEngine.h  SimEntity.h  SimEntry.h  TerrainSystem.h
sim/include/sim/math/: Random.h
sim/include/sim/phenomenology/optics/: MockRenderer.h
sim/include/sim/physics/: DroneDynamics.h  RadarPhysics.h
sim/src/: main.cpp
sim/src/bridge_server/: ShmWriter.cpp
sim/src/engine/: Environment.cpp  ScenarioLoader.cpp  SimEngine.cpp  SimEntity.cpp
sim/src/phenomenology/optics/: MockRenderer.cpp
sim/src/physics/: DroneDynamics.cpp  RadarPhysics.cpp
station/include/station/backend/tactical/: TrackStore.h
station/include/station/backend/video/: VideoReceiver.h
station/src/backend/comms/: CoreClient.cpp  CoreClient.h  StationProtocol.h
station/src/backend/tactical/: TrackStore.cpp
station/src/frontend/: Main.qml
station/src/frontend/components/: VideoHud.qml
station/src/frontend/views/: TacticalView.qml
tools/: bridge_viz.py
